Fixed the button outline and overflowing of table.

--- a/client/src/app/dashboard/table-all/table-all.component.css
+++ b/client/src/app/dashboard/table-all/table-all.component.css
@@ -35,7 +35,7 @@ table {
 }
 
 .customWidthClass{
-   width: 320px;
+   width: 300px;
 }
 
 .mat-elevation-z8 {
@@ -78,3 +78,6 @@ tr.example-element-row:not(.example-expanded-row):active {
   border-bottom-width: 0;
 }
 
+.customOutline {
+  outline: none;
+}
